css/master.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');



body{
    font-family: Roboto, Tahoma;
    background-image: url(../content/background.png);
    background-size: cover;
}

li{
    padding: 0.2em;
}

.small-screens{
    display: none;
}


.navbar-small{
    display: none;
}

.navbar{
    font-size: 1em;
    text-transform: uppercase;
    font-weight: bold;
    background: rgba(0,0,0,0.6) !important;
}
.navbar-dark .navbar-nav .nav-link{
    color: #fff;
}

.navbar-dark .navbar-nav .nav-link.active,
.navbar-dark .navbar-nav .nav-link:hover{
    color: #23a6f1;
}

.custom-container {
    margin: 0; /* Override default margin */
}

#experience .timeline-container,
#experience .top-section,
#experience .timeline {
    margin: 0; /* Override default margin */
}



#hero{
    position: relative;
}

#hero video{
    height: 100vh;
    width: 100%;
    background-position: absolute;
    z-index: 10;
    object-fit: cover;
    filter: blur(20%);
}

#hero .content{
    background:rgba(0,0,0,0.5);
    height: 100%;
    width: 100%;
    z-index: 20;
    position: absolute;
    top:0;
    left:0;
}

#hero .content h1{
    color: #fff;
    font-size: 500%;
    font-weight: bold;
}

#hero .content h3{
    color: #fff;
    font-size: 300%;
    font-weight: bold;
}


.txt-type{
    color: #23a6f1;
}

.txt-type::after {
    animation: cursor 0.6s linear 0.2s 1 normal forwards, cursor 0.6s linear 4s 3 normal forwards;
    content: "|";
    animation-iteration-count: infinite;
    color: #23a6f1;
}

body {
    overflow-x: hidden;
}

.main-content{

}
#experience {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
}

.timeline-container {
    width: 100%;
}



@keyframes cursor{
    0%, 100%{color: transparent}
    50%{color: #23a6f1;;}
}




/*WILL NEED MQs*/
#afro{
    margin-left: 12em;
}
/*WILL NEED MQs*/
.card-body{
    background-color: #70838a;
}


.footer-container .footer-icons li{
    display: inline;
    padding-left: 2em;
    padding-right: 2em;
}

.footer-text a{
    text-decoration: none;
    color: #fff;
}

.footer-text a:hover {
    color: #23a6f1;
}

.footer-text p{
    text-decoration: none;
    font-size: 50%; !important;
    color: #fff;
}

.card:hover{
    transform: scale(1.75);
}


.timeline-container{
    padding: 2rem;
    padding-bottom: 0.5em;
    margin: 0 auto;
    max-width: 800px;

}

.timeline{
    position: relative;
    min-height: 2em;
}

.line{
    position: absolute;
    z-index: 2;
    left: calc(50% - 1px);
    width: 2px;
    top: -50px;
    bottom: -50px;
    background-color: black;
    display: none;
}

.line:before,
.line:after {
    position: absolute;
    display: block;
    content: "";
    height: 1rem;
    width: 1rem;
    border-radius: 50%;
    background-color: #000;
    left: 50%;
    transform: translateX(-50%);
}

.line:after{
    bottom: 0;
}

.time-period{
    color: #5f5f5f;
}

.section{
    display: flex;
    opacity: 0;
    transform: translateX(-100%);
    transition: 600ms ease;
    position: relative;
    z-index: 1;
    margin: 10px 0;
    padding: 1rem;
    border-radius: 1rem;
    align-items: center;
    min-height: 300px;
}

.content img:nth-child(even){
    flex-direction: row-reverse;
    transform: translateX(100%);
}

.section:nth-child(odd){
    flex-direction: row-reverse;
    transform: translateX(100%);
}

.bead{
    position: absolute;
    display: block;
    height: 1rem;
    width: 1rem;
    border-radius: 50%;
    background-color: black;
    left: 50%;
    top: 20%;
    transform: translateX(-50%);
}

.content{
    width: calc(50% - 2rem);
}

.show-me:nth-child(n){
    transform: none;
    opacity: 1;
}

.vl {
    border-left: 6px solid black;
    height: 100px;
    position: absolute;
    left: 50%;
    margin-left: -3px;
    top: 0;
}

/*MEDIA QUERIES*/


@media only screen and (max-width: 1200px) {

    #afro{
        margin-left: 3em;
        width: 70%;
        padding-top: 1em;
    }

    .car-size{
        top: 5em;
        width: 105%;
    }

    .small-screens{
        display: none;
    }
}

@media only screen and (max-width: 992px) {

    .vl {
        border-left: 6px solid black;
        height: 100px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        top: 17.5em;
    }

    .vl2 {
        border-left: 6px solid black;
        height: 100px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        top: 57.3em;
    }

    .vl3 {
        border-left: 6px solid black;
        height: 100px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        top: 104em;
    }

    .vl4 {
        border-left: 6px solid black;
        height: 100px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        position: absolute;
        left: 50%;
        margin-left: -3px;
        top: 146.5em;
    }

    .navbar-large{
        display: none;
    }

    .navbar-small{
        display: block;
        font-size: 2em;
        text-transform: uppercase;
        font-weight: bold;
        background: rgba(0,0,0,0.6) !important;
    }

    .footer-container{
        display: none;
    }

    .navbar-small li{
        font-size: 2em;
    }

    .navbar-toggler-icon{
        font-size: 1.8em;
    }

    .large-screens{
        display: none;
    }

    .small-screens{
        display: block;
    }

    #afro-sm{
        width: 110%;
        height: 69%;
        padding-top: 6em;
    }

    .support-content{
        position: relative;
        top: -5em;
        left: 10em;
    }

    .carousel-sm{
        display: flex;
        align-items: center;
        justify-content: center;
        margin-top: -6em;
    }

    .main-content-2{
        padding-top: 3em;
    }


    .web-card{
        position: relative;
        left: 11em;
    }

    .film-card{
        position: relative;
        right: 11em;
        margin-top: 42em;
    }

    .edit-card{
        position: relative;
        left: 11em;
        padding-top: 0;
    }

    .icon{
        padding: 1em 2em 0em 2em;
        width: 130%;
    }

    .icon_twitter{
        margin-top: -0.5em;
        padding: 0 2em 0 2em;
        width: 125%;
    }

    .footer-container .footer-icons li{
        display: inline;
        padding-right: 5em;
        width: 100%;
    }

    .line-mobile{
        border-left: 6px solid black;
        height: 500px;
    }

}

